--- a/HTML/Layouts.html
+++ b/HTML/Layouts.html
@@ -2,9 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>MainPage</title>
+    <style>
+
+        #center{
+            width: 80%;
+            height: 80%;
+            margin: auto;
+        }
+        #main {
+            background-color: gold;
+            height: 700px;
+        }
+
+        #header {
+            background-color: red;
+            height: 100px;
+        }
+
+        #footer {
+            background-color: blue;
+            height: 150px;
+        }
+    </style>
 </head>
 <body>
-
+<div id="center">
+    <div id="header">
+        logo
+        menu
+        search
+        watchlist
+        sign in
+    </div>
+    <div id="main">
+        main
+    </div>
+    <div id="footer">
+        footer
+    </div>
+</div>
 </body>
 </html>
