--- a/HTML/index.html
+++ b/HTML/index.html
@@ -69,19 +69,27 @@
             height: 50px;
         }
 
-        .fromYourWatchList > input{
+        .fromYourWatchList > input {
             background-color: goldenrod;
         }
 
-        .fromYourWatchList > p{
+        .fromYourWatchList > p {
             color: white;
             margin: 20px 200px;
         }
 
-        .fromYourWatchList > input{
+        .fromYourWatchList > input {
             background-color: goldenrod;
             padding: 10px 20px;
             margin: 20px 200px;
+        }
+
+        .fanFavorites > input {
+            padding: 0;
+            border: none;
+            background: none;
+            font-size: 40px;
+            color: goldenrod;
         }
 
     </style>
@@ -154,6 +162,9 @@
             </p>
 
             <input type="button" value="Sign in to IMDb">
+        </div>
+        <div class="fanFavorites">
+            <input type="button" value="Fan Favorites">
         </div>
     </div>
     <div class="footer">
