updated index.html file

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -92,6 +92,33 @@
             color: goldenrod;
         }
 
+        .trailers {
+            display: flex;
+            flex-direction: row;
+        }
+
+        .moreToWatch > h1{
+            color: white;
+        }
+
+        .moreToWatch > h3{
+            color: gainsboro;
+        }
+
+        .buttons {
+            display: flex;
+            flex-direction: row;
+        }
+
+        .buttons > input{
+            width: 130px;
+            height: 30px;
+            background: none;
+            color: white;
+            border: 2px solid white;
+        }
+
+
     </style>
 </head>
 <body style="margin: 0px">
@@ -165,6 +192,27 @@
         </div>
         <div class="fanFavorites">
             <input type="button" value="Fan Favorites">
+            <div class="trailers">
+                <img src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg"
+                     style="width: 200px; height: 200px; margin: 20px 50px 20px 0px">
+                <img src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg"
+                     style="width: 200px; height: 200px; margin: 20px 50px 20px 0px">
+                <img src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg"
+                     style="width: 200px; height: 200px; margin: 20px 50px 20px 0px">
+                <img src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg"
+                     style="width: 200px; height: 200px; margin: 20px 50px 20px 0px">
+                <img src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg"
+                     style="width: 200px; height: 200px; margin: 20px 50px 20px 0px">
+            </div>
+        </div>
+
+        <div class ="moreToWatch">
+            <h1>More to watch</h1>
+            <h3>IMDb helps you select the perfect next show or movie to watch.</h3>
+            <div class="buttons">
+                <input type="button" value="Watch Guide">
+                <input type="button" value="Most Popular" style="margin-left: 40px">
+            </div>
         </div>
     </div>
     <div class="footer">
