--- a/HTML/index.html
+++ b/HTML/index.html
@@ -215,6 +215,11 @@
             .whatToWatch > input{
                 margin: 0px auto;
             }
+
+            .fromYourWatchList > p{
+                width: 100%;
+                margin-left: 20%;
+            }
         }
     </style>
 </head>
