--- a/HTML/index.html
+++ b/HTML/index.html
@@ -16,6 +16,36 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            height: 80px;
+        }
+
+        .logo > img{
+            width: 70px;
+            height: 40px;
+        }
+
+        .menu > input{
+            width: 70px;
+            height: 40px;
+            background-color: goldenrod;
+        }
+
+        .search > input{
+            width: 250px;
+            height: 40px;
+            background-color: white;
+        }
+
+        .watchList > input{
+            width: 100px;
+            height: 40px;
+            background-color: goldenrod;
+        }
+
+        .signIn > input{
+            width: 70px;
+            height: 40px;
+            background-color: goldenrod;
         }
 
         .content {
@@ -45,10 +75,10 @@
         }
 
         .trailers > img{
-            width: 100px;
-            height: 100px;
+            width: 200px;
+            height: 200px;
+            margin: 20px 50px 20px 0px;
         }
-
 
         .featuredToday > h1 {
             color: goldenrod;
@@ -189,7 +219,7 @@
 
             .trailers >img{
                 margin-right: 20px;
-                width: 20%;
+                width: 100px;
                 height: 200px;
             }
 
@@ -220,6 +250,11 @@
                 width: 100%;
                 margin-left: 20%;
             }
+
+            .buttons > input{
+                width: 150px;
+                height: 40px;
+            }
         }
     </style>
 </head>
@@ -227,8 +262,7 @@
 <div class="main">
     <div class="header">
         <div class="logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/IMDB_Logo_2016.svg/1200px-IMDB_Logo_2016.svg.png"
-                 style="width: 70px; height: 30px">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/IMDB_Logo_2016.svg/1200px-IMDB_Logo_2016.svg.png">
         </div>
         <div class="menu">
             <input type="button" value="Menu">
@@ -288,16 +322,11 @@
         <div class="fanFavorites">
             <input type="button" value="Fan Favorites">
             <div class="trailers">
-                <img src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg"
-                     style="width: 200px; height: 200px; margin: 20px 50px 20px 0px">
-                <img src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg"
-                     style="width: 200px; height: 200px; margin: 20px 50px 20px 0px">
-                <img src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg"
-                     style="width: 200px; height: 200px; margin: 20px 50px 20px 0px">
-                <img src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg"
-                     style="width: 200px; height: 200px; margin: 20px 50px 20px 0px">
-                <img src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg"
-                     style="width: 200px; height: 200px; margin: 20px 50px 20px 0px">
+                <img src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg">
+                <img src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg">
+                <img src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg">
+                <img src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg">
+                <img src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg">
             </div>
         </div>
 
