--- a/HTML/index.html
+++ b/HTML/index.html
@@ -75,8 +75,8 @@
         }
 
         .trailers > img{
-            width: 200px;
-            height: 200px;
+            width: 20%;
+            height: 20%;
             margin: 20px 50px 20px 0px;
         }
 
