--- a/HTML/index.html
+++ b/HTML/index.html
@@ -189,14 +189,15 @@
             padding: 0;
             border: none;
             background: none;
-            font-size: 40px;
+            font-size: 30px;
             color: goldenrod;
-            margin-left: 2%;
+            margin-left: 1%;
         }
 
         .fanFavorites2{
             display: flex;
             flex-direction: row;
+            margin-top: 20px;
         }
 
         .images {
