--- a/HTML/index.html
+++ b/HTML/index.html
@@ -257,6 +257,11 @@
             color: gainsboro;
         }
 
+        .footer > h4{
+            color: gray;
+            text-align: center;
+        }
+
         @media only screen and (max-width: 600px) {
 
             .main {
@@ -450,7 +455,7 @@
         </div>
     </div>
     <div class="footer">
-
+        <h4> © 2021 by IMDb.com, Inc.</h4>
     </div>
 </div>
 </body>
